k8s/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-service
  namespace: my-microservice
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
