k8s/ingress/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-deployment
  namespace: my-microservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /first-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: first-service
                port:
                  number: 80
                  
          - path: /second-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: second-service
                port:
                  number: 80
                  
          - path: /discovery-server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
